--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,14 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	// Jackson Databind 의존성
+	implementation 'com.fasterxml.jackson.core:jackson-databind'
+	// Jackson Dataformat XML 의존성
+	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'
+	implementation 'javax.xml.bind:jaxb-api:2.3.1'
+	implementation 'com.sun.xml.bind:jaxb-core:2.3.0.1'
+	implementation 'com.sun.xml.bind:jaxb-impl:2.3.2'
+	implementation 'javax.activation:activation:1.1.1'
 }
 
 tasks.named('test') {
