--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=greenish
 spring.datasource.url=jdbc:mysql://localhost:3306/greenish?serverTimezone=UTC&characterEncoding=UTF-8
-
+nongsaro.api.key=202404056YHFF90XAON4MTJOMRB6G
+nongsaro.api.url=http://api.nongsaro.go.kr/service/garden
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
@@ -13,3 +14,7 @@ spring.jpa.properties.hibernate.default_batch_fetch_size=100
 logging.level.org.hibernate.SQL=debug
 
 spring.profiles.include=secure
+
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
+spring.http.encoding.force=true
